--- a/src/App.scss
+++ b/src/App.scss
@@ -16,15 +16,14 @@ body{
   padding: 20px;
   color: white;
 }
-
-.App-title {
-  font-size: 1.5em;
+.center {
+  margin: auto;
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
-
-.App-intro {
-  font-size: large;
-}
-
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
